src/components/layout/sidebar/sidebar.module.css
:root {
  --main-sidebar-bg: rgba(0, 0, 0, 1);
  --main-sidebar-clr: #fff;
}
.sideBar {
  display: flex;
  justify-content: center;
  /* Full screen */
  width: 100vw;
  height: 100vh;
  max-width: none;
  max-height: none;
  margin: 0;
  padding: 0;
  border: none;
  border-radius: 0;
  background-color: var(--main-sidebar-bg);
  color: var(--main-sidebar-clr);
  position: fixed;
  top: 0;
  right: 0;
  z-index: 1000; /* This is to prevent main page animations from slipping through */

  /* Animation properties */

  transform: translateX(100%);
  transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}
.openSidebar {
  transform: translateX(0);
  opacity: 1;
}
/* Custom backdrop */
.sidebar::backdrop {
  background: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(4px);
  animation: fadeIn 0.3s ease;
}
@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.contentWrapper,
.logoContainer,
.headerContainer,
.logoWrapper {
  display: flex;
}
.contentWrapper {
  flex-direction: column;
  width: 100%;
  max-width: 1340px;
  padding-top: 14px;
}
.headerContainer {
  justify-content: space-between;
}

.logoContainer {
  align-items: center;
  gap: 8px;
  cursor: pointer;
}
.logoWrapper {
  align-items: center;
  justify-content: center;
  width: clamp(15px, 10%, 45px);
  border-radius: 50%;
  background-color: #636366;
}
.logo {
  width: 95%;
  height: auto;
}
.websiteName {
  font-size: 1.2rem;
  font-weight: bold;
  color: var(--main-sidebar-clr);
}
.closeIcon {
  min-width: 24px;
  color: var(--main-sidebar-clr);
}
.navContainer {
  padding: 50px 0 0;
}
.listContainer {
  padding: 0;
}
.navListItem {
  padding: 25px 0 25px 55px;
}
.navListItem:hover {
  text-decoration: underline;
}
.navlink {
  font-size: 20px;
  color: var(--main-sidebar-clr);
}
.navlink:focus {
  color: gray;
}

